refactor(env): add MercadoPago configuration variables to .env.example

--- a/.env.example
+++ b/.env.example
@@ -64,6 +64,13 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-DISCORD_WEBHOOK_URL=
+MERCADOPAGO_ACCESS_TOKEN=
+MERCADOPAGO_PUBLIC_KEY=
+MERCADOPAGO_WEBHOOK_SECRET=
+MERCADOPAGO_CONNECTION_TIMEOUT=30
+MERCADOPAGO_MAX_RETRIES=2
 
-MP_ACCESS_TOKEN=
+DISCORD_WEBHOOK_URL=
+DISCORD_INVITE_URL=
+
+YOUTUBE_CHANNEL_URL=
