--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
+APP_LOCALE=pt_BR
+APP_FALLBACK_LOCALE=pt_BR
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
